more tweaks, more bugs squished

--- a/varmints_js/styles.css
+++ b/varmints_js/styles.css
@@ -1,6 +1,4 @@
-h1 {
-    color: green
-}
+
 
 #layer1 {
     border: 1px solid black;
@@ -19,6 +17,9 @@ main {
     flex-direction: column;
     align-items: space-between;
     margin: 10px;
+}
+h3 {
+    margin: 5px
 }
 
 .data-row {
